# Bluetang

./: CHANGELOG.md  CONTRIBUTING.md  README.md  cli.py  pyproject.toml
bluetang/config/: config.yml
bluetang/game_launchers/: executable_game_launcher.py  steam_game_launcher.py  web_browser_game_launcher.py
bluetang/machine_learning/context_classification/context_classifiers/: __init__.py
bluetang/machine_learning/object_recognition/: object_recognizer.py
bluetang/machine_learning/object_recognition/object_recognizers/: luminoth_object_recognizer.py
bluetang/machine_learning/reinforcement_learning/agents/: ppo_agent.py  rainbow_dqn_agent.py  random_agent.py  recorder_agent.py
bluetang/machine_learning/reinforcement_learning/rainbow_dqn/: replay_memory.py
bluetang/templates/BluetangGameAgentPlugin/: plugin.py
config/: config.yml
tests/unit/: test_agent.py  test_game_api.py  test_random_agent.py
